--- a/src/main/webapp/pages/Person/page.min.html
+++ b/src/main/webapp/pages/Person/page.min.html
@@ -20,15 +20,14 @@ Application.$controller("PersonPageController", ["$scope", function ($scope) {
 
 }]);
 
-
-Application.$controller("grid1Controller", ["$scope",
+Application.$controller("grid2Controller", ["$scope",
 	function($scope) {
 		"use strict";
 		$scope.ctrlScope = $scope;
 	}
 ]);
 
-Application.$controller("liveform1Controller", ["$scope",
+Application.$controller("liveform2Controller", ["$scope",
 	function($scope) {
 		"use strict";
 		$scope.ctrlScope = $scope;
@@ -36,7 +35,209 @@ Application.$controller("liveform1Controller", ["$scope",
 ]);
 </script>
 <script id="Person.variables.json">
-var _PersonPage_Variables_ ={}
+var _PersonPage_Variables_ ={
+  "createPersonType" : {
+    "_id" : "wm-createPersonType-wm.LiveVariable-1464005542318",
+    "name" : "createPersonType",
+    "owner" : "Page",
+    "category" : "wm.LiveVariable",
+    "dataBinding" : [ {
+      "target" : "person",
+      "value" : "bind:Widgets.grid2.selecteditem.id",
+      "type" : "number"
+    }, {
+      "target" : "type",
+      "value" : "bind:Widgets.checkboxset1.datavalue",
+      "type" : "number"
+    } ],
+    "operation" : "insert",
+    "dataSet" : {
+      "dataValue" : ""
+    },
+    "type" : "PersonType",
+    "isList" : false,
+    "saveInPhonegap" : false,
+    "firstRow" : 0,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "liveSource" : "basicsDB",
+    "ignoreCase" : false,
+    "matchMode" : "start",
+    "propertiesMap" : {
+      "columns" : [ {
+        "fieldName" : "person",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "PERSON_ID",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "PERSON",
+        "relatedEntityName" : "Person",
+        "relatedFieldName" : "person.id",
+        "isList" : false,
+        "targetTable" : "PERSON",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "place",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "PLACE_ID",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : true,
+          "defaultValue" : "",
+          "targetTable" : "PLACE",
+          "scale" : 0
+        }, {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "name",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "NAME",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 19,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "age",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "AGE",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "type",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "TYPE_ID",
+        "isPrimaryKey" : false,
+        "notNull" : false,
+        "length" : 255,
+        "precision" : 10,
+        "generator" : "assigned",
+        "isRelated" : true,
+        "defaultValue" : "",
+        "relatedTableName" : "TYPE",
+        "relatedEntityName" : "Type",
+        "relatedFieldName" : "type.id",
+        "isList" : false,
+        "targetTable" : "TYPE",
+        "scale" : 0,
+        "columns" : [ {
+          "fieldName" : "id",
+          "type" : "integer",
+          "fullyQualifiedType" : "integer",
+          "columnName" : "ID",
+          "isPrimaryKey" : true,
+          "notNull" : true,
+          "length" : 255,
+          "precision" : 10,
+          "generator" : "identity",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "name",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "NAME",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 19,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        }, {
+          "fieldName" : "minAge",
+          "type" : "string",
+          "fullyQualifiedType" : "string",
+          "columnName" : "MIN_AGE",
+          "isPrimaryKey" : false,
+          "notNull" : false,
+          "length" : 255,
+          "precision" : 19,
+          "generator" : "assigned",
+          "isRelated" : false,
+          "defaultValue" : "",
+          "scale" : 0
+        } ]
+      }, {
+        "fieldName" : "id",
+        "type" : "integer",
+        "fullyQualifiedType" : "integer",
+        "columnName" : "ID",
+        "isPrimaryKey" : true,
+        "notNull" : true,
+        "length" : 255,
+        "precision" : 10,
+        "generator" : "identity",
+        "isRelated" : false,
+        "defaultValue" : "",
+        "scale" : 0
+      } ],
+      "entityName" : "PersonType",
+      "fullyQualifiedName" : "com.basics.basicsdb.PersonType",
+      "tableType" : "TABLE",
+      "primaryFields" : [ "id" ]
+    },
+    "tableName" : "PERSON_TYPE",
+    "tableType" : "TABLE",
+    "properties" : [ "person", "type" ],
+    "relatedTables" : [ {
+      "columnName" : "person",
+      "relationName" : "person",
+      "type" : "Person",
+      "watchOn" : "BasicsDBPersonData",
+      "package" : "com.basics.basicsdb.PersonType"
+    }, {
+      "columnName" : "type",
+      "relationName" : "type",
+      "type" : "Type",
+      "watchOn" : "BasicsDBTypeData",
+      "package" : "com.basics.basicsdb.PersonType"
+    } ],
+    "filterFields" : { },
+    "inputFields" : { },
+    "package" : "com.basics.basicsdb.PersonType"
+  }
+}
 </script>
 <script id="Person.html" type="text/ng-template">
 <wm-page data-ng-controller="PersonPageController" pagetitle="Person" name="page1">
@@ -44,47 +245,46 @@ var _PersonPage_Variables_ ={}
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-livegrid name="livegrid1" service="basicsDB@Person">
-                <wm-grid gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false" title="PERSON List" dataset="bind:Variables.BasicsDBPersonData.dataSet" navigation="Basic" name="grid1">
+            <wm-livegrid service="basicsDB@Person" name="livegrid2">
+                <wm-grid name="grid2" navigation="Basic" dataset="bind:Variables.BasicsDBPersonData.dataSet" title="PERSON List" gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false">
                     <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="name" caption="Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                     <wm-grid-column binding="age" caption="Age" generator="assigned" pcdisplay="true" mobiledisplay="true" type="integer"></wm-grid-column>
                     <wm-grid-column binding="place.id" caption="Place Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="place.name" caption="Place Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                 </wm-grid>
-                <wm-liveform novalidate="false" title="PERSON Info" formlayout="inline" dataset="bind:Variables.BasicsDBPersonData.dataSet" captionalign="left" captionposition="top" name="liveform1">
-                    <wm-layoutgrid name="layoutgrid1">
-                        <wm-gridrow name="gridrow1">
-                            <wm-gridcolumn columnwidth="12" name="gridcolumn2">
-                                <wm-form-field name="name" displayname="Name" show="true" primary-key="false" generator="assigned" key="name" type="string" is-related="false" pc-display="true" mobile-display="true" widget="text" maxchars="255" inputtype="text"
-                                regexp=".*" placeholder="Enter value"></wm-form-field>
-                            </wm-gridcolumn>
-                        </wm-gridrow>
-                        <wm-gridrow name="gridrow2">
-                            <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                                <wm-form-field name="age" displayname="Age" show="true" primary-key="false" generator="assigned" key="age" type="integer" is-related="false" pc-display="true" mobile-display="true" step="0" widget="number" inputtype="number"
-                                regexp=".*" placeholder="Enter value"></wm-form-field>
-                            </wm-gridcolumn>
-                        </wm-gridrow>
+                <wm-liveform on-success="createPersonType" name="liveform2" captionposition="top" captionalign="left" dataset="bind:Variables.BasicsDBPersonData.dataSet" novalidate="false" title="PERSON Info" formlayout="inline">
+                    <wm-layoutgrid name="layoutgrid2">
                         <wm-gridrow name="gridrow3">
-                            <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                                <wm-form-field name="place" displayname="Place" show="true" primary-key="false" generator="assigned" key="place" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select" regexp=".*" placeholder="Select value"
-                                displayexpression="name"></wm-form-field>
+                            <wm-gridcolumn name="gridcolumn5" columnwidth="12" show="hide">
+                                <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
+                            </wm-gridcolumn>
+                            <wm-gridcolumn name="gridcolumn6" columnwidth="12" show="show">
+                                <wm-form-field name="name" displayname="Name" required="false" show="true" generator="assigned" primary-key="false" key="name" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
+                        <wm-gridrow name="gridrow4">
+                            <wm-gridcolumn name="gridcolumn7" columnwidth="12" show="show">
+                                <wm-form-field name="age" displayname="Age" required="false" show="true" generator="assigned" primary-key="false" key="age" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                        <wm-gridrow name="gridrow5">
+                            <wm-gridcolumn name="gridcolumn8" columnwidth="12" show="show">
+                                <wm-form-field name="place" displayname="Place" required="false" show="true" generator="assigned" primary-key="false" key="place" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                        <wm-gridrow name="gridrow6"></wm-gridrow>
                     </wm-layoutgrid>
-                    <wm-composite name="composite1">
-                        <wm-label class="col-md-3 control-label" name="label1" caption="Type"></wm-label>
-                        <wm-container class="col-md-9" name="container1">
-                            <wm-checkboxset height="auto" name="checkboxset1" dataset="bind:Variables.BasicsDBTypeData.dataSet" datafield="id" displayfield="name"></wm-checkboxset>
-                        </wm-container>
-                    </wm-composite>
-                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" is-related="false" required="required" pc-display="true" mobile-display="true" step="0" widget="number" inputtype="number"
-                    regexp=".*" placeholder="Enter value"></wm-form-field>
-                    <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" type="button" update-mode="true"></wm-form-action>
-                    <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" type="submit" update-mode="true"></wm-form-action>
+                    <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
+                    <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                 </wm-liveform>
             </wm-livegrid>
+            <wm-composite name="composite1">
+                <wm-label name="label1" class="col-md-3 control-label"></wm-label>
+                <wm-container name="container1" class="col-md-9">
+                    <wm-checkboxset displayfield="name" datafield="id" dataset="bind:Variables.BasicsDBTypeData.dataSet" name="checkboxset1" height="auto"></wm-checkboxset>
+                </wm-container>
+            </wm-composite>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
