--- a/src/main/webapp/pages/PersonType/PersonType.html
+++ b/src/main/webapp/pages/PersonType/PersonType.html
@@ -3,32 +3,34 @@
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-livegrid name="livegrid1" service="basicsDB@PersonType">
-                <wm-grid gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false" title="PERSON_TYPE List" dataset="bind:Variables.BasicsDBPersonTypeData.dataSet" navigation="Basic" name="grid1">
+            <wm-livegrid service="basicsDB@PersonType" name="livegrid2">
+                <wm-grid name="grid2" navigation="Basic" dataset="bind:Variables.BasicsDBPersonTypeData.dataSet" title="PERSON_TYPE List" gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false">
                     <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="person.id" caption="Person Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="person.name" caption="Person Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                     <wm-grid-column binding="person.age" caption="Person Age" generator="assigned" pcdisplay="true" mobiledisplay="true" type="integer"></wm-grid-column>
                     <wm-grid-column binding="type.id" caption="Type Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="type.name" caption="Type Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
-                    <wm-grid-column binding="type.minAge" caption="Type Min Age" generator="assigned" pcdisplay="true" mobiledisplay="true" type="integer"></wm-grid-column>
+                    <wm-grid-column binding="type.minAge" caption="Type Min Age" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                 </wm-grid>
-                <wm-liveform novalidate="false" title="PERSON_TYPE Info" formlayout="inline" dataset="bind:Variables.BasicsDBPersonTypeData.dataSet" captionalign="left" captionposition="top" name="liveform1">
-                    <wm-layoutgrid name="layoutgrid1">
-                        <wm-gridrow name="gridrow1">
-                            <wm-gridcolumn columnwidth="12" show="hide" name="gridcolumn1">
+                <wm-liveform name="liveform2" captionposition="top" captionalign="left" dataset="bind:Variables.BasicsDBPersonTypeData.dataSet" novalidate="false" title="PERSON_TYPE Info" formlayout="inline">
+                    <wm-layoutgrid name="layoutgrid2">
+                        <wm-gridrow name="gridrow4">
+                            <wm-gridcolumn name="gridcolumn4" columnwidth="12" show="hide">
                                 <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
                             </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="12" show="show" name="gridcolumn2">
-                                <wm-form-field name="person" displayname="Person" required="false" show="true" generator="assigned" primary-key="false" key="person" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
+                            <wm-gridcolumn name="gridcolumn5" columnwidth="12" show="show">
+                                <wm-form-field displayfield="name" datafield="id" dataset="bind:Variables.BasicsDBPersonData.dataSet" name="person" displayname="Person" required="true" show="true" generator="assigned" primary-key="false" key="person" type="list"
+                                is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
-                        <wm-gridrow name="gridrow2">
-                            <wm-gridcolumn columnwidth="12" show="show" name="gridcolumn3">
-                                <wm-form-field name="type" displayname="Type" required="false" show="true" generator="assigned" primary-key="false" key="type" type="list" is-related="true" pc-display="true" mobile-display="true" widget="select"></wm-form-field>
+                        <wm-gridrow name="gridrow5">
+                            <wm-gridcolumn name="gridcolumn6" columnwidth="12" show="show">
+                                <wm-form-field displayfield="name" datafield="id" name="type" displayname="Type" required="false" show="true" generator="assigned" primary-key="false" key="type" type="list" is-related="true" pc-display="true" mobile-display="true"
+                                widget="checkboxset"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
-                        <wm-gridrow name="gridrow3"></wm-gridrow>
+                        <wm-gridrow name="gridrow6"></wm-gridrow>
                     </wm-layoutgrid>
                     <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                     <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
