--- a/src/main/webapp/pages/Place/Place.html
+++ b/src/main/webapp/pages/Place/Place.html
@@ -3,22 +3,22 @@
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-livegrid name="livegrid1" service="basicsDB@Place">
-                <wm-grid gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false" title="PLACE List" dataset="bind:Variables.BasicsDBPlaceData.dataSet" navigation="Basic" name="grid1">
+            <wm-livegrid service="basicsDB@Place" name="livegrid2">
+                <wm-grid name="grid2" navigation="Basic" dataset="bind:Variables.BasicsDBPlaceData.dataSet" title="PLACE List" gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false">
                     <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="name" caption="Name" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                 </wm-grid>
-                <wm-liveform novalidate="false" title="PLACE Info" formlayout="inline" dataset="bind:Variables.BasicsDBPlaceData.dataSet" captionalign="left" captionposition="top" name="liveform1">
-                    <wm-layoutgrid name="layoutgrid1">
-                        <wm-gridrow name="gridrow1">
-                            <wm-gridcolumn columnwidth="12" show="hide" name="gridcolumn1">
+                <wm-liveform name="liveform2" captionposition="top" captionalign="left" dataset="bind:Variables.BasicsDBPlaceData.dataSet" novalidate="false" title="PLACE Info" formlayout="inline">
+                    <wm-layoutgrid name="layoutgrid2">
+                        <wm-gridrow name="gridrow3">
+                            <wm-gridcolumn name="gridcolumn3" columnwidth="12" show="hide">
                                 <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
                             </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="12" show="show" name="gridcolumn2">
+                            <wm-gridcolumn name="gridcolumn4" columnwidth="12" show="show">
                                 <wm-form-field name="name" displayname="Name" required="false" show="true" generator="assigned" primary-key="false" key="name" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true" widget="text"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
-                        <wm-gridrow name="gridrow2"></wm-gridrow>
+                        <wm-gridrow name="gridrow4"></wm-gridrow>
                     </wm-layoutgrid>
                     <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                     <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
