--- a/src/main/webapp/pages/User/page.min.html
+++ b/src/main/webapp/pages/User/page.min.html
@@ -34,87 +34,23 @@ Application.$controller("liveform1Controller", ["$scope",
 		$scope.ctrlScope = $scope;
 	}
 ]);
+
+Application.$controller("grid2Controller", ["$scope",
+	function($scope) {
+		"use strict";
+		$scope.ctrlScope = $scope;
+	}
+]);
+
+Application.$controller("liveform2Controller", ["$scope",
+	function($scope) {
+		"use strict";
+		$scope.ctrlScope = $scope;
+	}
+]);
 </script>
 <script id="User.variables.json">
-var _UserPage_Variables_ ={
-  "BasicsDBUserData" : {
-    "_id" : "wm-BasicsDBUserData-wm.LiveVariable-1463981780516",
-    "name" : "BasicsDBUserData",
-    "owner" : "Page",
-    "category" : "wm.LiveVariable",
-    "dataBinding" : [ ],
-    "operation" : "read",
-    "dataSet" : {
-      "dataValue" : ""
-    },
-    "type" : "User",
-    "isList" : true,
-    "saveInPhonegap" : false,
-    "firstRow" : 0,
-    "maxResults" : 20,
-    "designMaxResults" : 10,
-    "startUpdate" : true,
-    "autoUpdate" : true,
-    "inFlightBehavior" : "executeLast",
-    "transformationRequired" : false,
-    "liveSource" : "basicsDB",
-    "ignoreCase" : false,
-    "matchMode" : "start",
-    "propertiesMap" : {
-      "columns" : [ {
-        "fieldName" : "id",
-        "type" : "integer",
-        "fullyQualifiedType" : "integer",
-        "columnName" : "ID",
-        "isPrimaryKey" : true,
-        "notNull" : true,
-        "length" : 255,
-        "precision" : 10,
-        "generator" : "identity",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "username",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "USERNAME",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      }, {
-        "fieldName" : "password",
-        "type" : "string",
-        "fullyQualifiedType" : "string",
-        "columnName" : "PASSWORD",
-        "isPrimaryKey" : false,
-        "notNull" : false,
-        "length" : 255,
-        "precision" : 19,
-        "generator" : "assigned",
-        "isRelated" : false,
-        "defaultValue" : "",
-        "scale" : 0
-      } ],
-      "entityName" : "User",
-      "fullyQualifiedName" : "com.basics.basicsdb.User",
-      "tableType" : "TABLE",
-      "primaryFields" : [ "id" ]
-    },
-    "isDefault" : true,
-    "bindCount" : 2,
-    "tableName" : "USER",
-    "tableType" : "TABLE",
-    "properties" : [ ],
-    "relatedTables" : [ ],
-    "package" : "com.basics.basicsdb.User"
-  }
-}
+var _UserPage_Variables_ ={ }
 </script>
 <script id="User.html" type="text/ng-template">
 <wm-page data-ng-controller="UserPageController" pagetitle="User" name="page1">
@@ -122,30 +58,30 @@ var _UserPage_Variables_ ={
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-livegrid name="livegrid1" service="basicsDB@User">
-                <wm-grid gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false" title="USER List" dataset="bind:Variables.BasicsDBUserData.dataSet" navigation="Basic" name="grid1">
+            <wm-livegrid service="basicsDB@User" name="livegrid2">
+                <wm-grid name="grid2" navigation="Basic" dataset="bind:Variables.BasicsDBUserData.dataSet" title="USER List" gridfirstrowselect="true" deleterow="true" updaterow="true" insertrow="true" readonlygrid="false">
                     <wm-grid-column binding="id" caption="Id" generator="identity" pcdisplay="true" mobiledisplay="true" type="integer" primary-key="true"></wm-grid-column>
                     <wm-grid-column binding="username" caption="Username" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                     <wm-grid-column binding="password" caption="Password" generator="assigned" pcdisplay="true" mobiledisplay="true" type="string"></wm-grid-column>
                 </wm-grid>
-                <wm-liveform novalidate="false" title="USER Info" formlayout="inline" dataset="bind:Variables.BasicsDBUserData.dataSet" captionalign="left" captionposition="top" name="liveform1">
-                    <wm-layoutgrid name="layoutgrid1">
-                        <wm-gridrow name="gridrow1">
-                            <wm-gridcolumn columnwidth="12" show="hide" name="gridcolumn1">
+                <wm-liveform name="liveform2" captionposition="top" captionalign="left" dataset="bind:Variables.BasicsDBUserData.dataSet" novalidate="false" title="USER Info" formlayout="inline">
+                    <wm-layoutgrid name="layoutgrid2">
+                        <wm-gridrow name="gridrow4">
+                            <wm-gridcolumn name="gridcolumn4" columnwidth="12" show="hide">
                                 <wm-form-field name="id" displayname="Id" required="true" show="false" generator="identity" primary-key="true" key="id" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true" widget="number"></wm-form-field>
                             </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="12" show="show" name="gridcolumn2">
+                            <wm-gridcolumn name="gridcolumn5" columnwidth="12" show="show">
                                 <wm-form-field name="username" displayname="Username" required="false" show="true" generator="assigned" primary-key="false" key="username" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
                                 widget="text"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
-                        <wm-gridrow name="gridrow2">
-                            <wm-gridcolumn columnwidth="12" show="show" name="gridcolumn3">
+                        <wm-gridrow name="gridrow5">
+                            <wm-gridcolumn name="gridcolumn6" columnwidth="12" show="show">
                                 <wm-form-field name="password" displayname="Password" required="false" show="true" generator="assigned" primary-key="false" key="password" type="string" is-related="false" maxchars="255" pc-display="true" mobile-display="true"
-                                widget="text"></wm-form-field>
+                                widget="password"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
-                        <wm-gridrow name="gridrow3"></wm-gridrow>
+                        <wm-gridrow name="gridrow6"></wm-gridrow>
                     </wm-layoutgrid>
                     <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
                     <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
